--- a/Data/Wrangling.ipynb
+++ b/Data/Wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "32f1aee2",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "ee28a6cb",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
        "(9950, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
     "for file in os.listdir(folder_path):\n",
     "    \n",
     "    file_path = os.path.join(folder_path, file)\n",
-    "    df = pd.read_csv(file_path, sep=';', header=None, names=['Link', 'Branche', 'Techstack'])\n",
+    "    df = pd.read_csv(file_path, sep=';', header=None, names=['Link', 'Branch', 'Techstack'])\n",
     "    files.append(df)\n",
     "    \n",
     "df = pd.concat(files, ignore_index=True)\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "e5b8b512",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "315"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "50c92740",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "b28cf656",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "40"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "60d86547",
    "metadata": {},
    "outputs": [],
@@ -162,17 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "856b3468",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7fe610a051c0>"
+       "<sqlite3.Cursor at 0x7f1c4d5761c0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "2b4139eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "links = df['Link'].to_list()\n",
-    "branch = df['Branche'].to_list()\n",
+    "branch = df['Branch'].to_list()\n",
     "\n",
     "for i in range(len(links)):\n",
     "    cur.execute(\"\"\"INSERT INTO Website VALUES(NULL, ?, ?)\"\"\", (links[i], branch[i]))\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "b97db592",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "afef892b",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "d4993e83",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "69107855",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "a46fcd3b",
    "metadata": {},
    "outputs": [],
